# sample-fastapi-graphql-book-api

./: .gitignore  .pylintrc  Dockerfile  LICENSE  Makefile  README.MD  app.py  book_api_stack.py  build-image.sh  deploy-image.sh  docker-compose.yaml  docker-image-publish.sh  main.py  pyproject.toml  schema.graphql
.github/workflows/: build.yml  deploy.yml
misc/: BookApi_GraphQL.postman_collection.json
src/clients/db/: __init__.py
src/config/: __init__.py
src/doc_templates/: about.html  enums.html  index.html  input_objects.html  mutations.html  objects.html  queries.html  scalars.html  unions.html
src/doc_templates/css/: styles.css
src/graphql_api/: __init__.py
src/jobs/: book_ratings_job.py
src/middlewares/: authorization.py
src/models/authors/: author_models.py
src/models/books/: book_models.py
src/models/common/: response_models.py
src/models/db/: db_models.py
src/models/reviews/: review_models.py
src/resolvers/books/: resolve_books.py
src/resolvers/reviews/: resolve_reviews.py
src/services/books/: book_service.py
src/services/reviews/: review_service.py
tests/: test_main.py
tests/services/books/: test_book_service.py
tests/services/reviews/: test_review_service.py
tests/test_utils/: mock_book_service_fixtures.py  mock_db_fixtures.py  test_data.py
